deploy/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storeproject
  namespace: apps
spec:
  replicas: 1

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1

  selector:
    matchLabels:
      app: storeproject

  template:
    metadata:
      labels:
        app: storeproject

    spec:
      automountServiceAccountToken: false

      nodeSelector:
        role: worker

      securityContext:
        seccompProfile:
          type: RuntimeDefault

        fsGroup: 1654
        fsGroupChangePolicy: OnRootMismatch

      containers:
        - name: storeproject
          image: gogodze/store-staging@sha256:87827a7903d5040a70712c92d557b075edfabda892a04c58ca2faecc70f5e1c4
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8080

          securityContext:
            runAsNonRoot: true
            runAsUser: 1654
            runAsGroup: 1654
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

          volumeMounts:
            - name: data
              mountPath: /data

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 512Mi

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: storeproject-data
