deploy/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storeproject
  namespace: apps
spec:
  selector:
    app: storeproject

  ports:
    - name: http
      port: 80
      targetPort: 8080
