deploy/production/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: storeproject-ingress
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app: storeproject

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik

      ports:
        - protocol: TCP
          port: 8080
